--- a/src/templates/base/search.html
+++ b/src/templates/base/search.html
@@ -26,9 +26,9 @@
 <main id="maincontent" class="main">
   <h1 class="title title-lg">{{ self.search_title() }}</h1>
 
-  <script src="https://cse.google.com/cse.js?cx=ffb208d5eae47b5bf" nonce="{{ csp_nonce() }}" ></script>
   <div id="search-area">
-  <div class="gcse-search" data-lr="lang_{{ lang }}" data-noresultsstring="{{ self.no_results() }}" data-hl="{{ lang }}"></div>
+    <div class="gcse-searchbox" data-enableHistory="true" data-autoCompleteMaxCompletions="5" data-autoCompleteMatchType='any' data-queryParameterName="q"></div>
+    <div class="gcse-searchresults" data-lr="lang_{{ lang }}" data-noresultsstring="{{ self.no_results() }}" data-hl="{{ lang }}"></div>
   </div>
   {% if lang != "en" %}
   <div class="en-btn">
