--- a/src/templates/base/search.html
+++ b/src/templates/base/search.html
@@ -27,7 +27,7 @@
   <h1 class="title title-lg">{{ self.search_title() }}</h1>
 
   <div id="search-area">
-    <div class="gcse-searchbox" data-enableHistory="true" data-autoCompleteMaxCompletions="5" data-autoCompleteMatchType='any' data-queryParameterName="q"></div>
+    <div class="gcse-searchbox" data-enablehistory="true" data-autocompletemaxcompletions="5" data-autocompletematchtype='any' data-queryparametername="q"></div>
     <div class="gcse-searchresults" data-lr="lang_{{ lang }}" data-noresultsstring="{{ self.no_results() }}" data-hl="{{ lang }}"></div>
   </div>
   {% if lang != "en" %}
