Fixing linting errors (again!!!)

--- a/src/static/css/almanac.css
+++ b/src/static/css/almanac.css
@@ -574,7 +574,7 @@ header .cta {
 
 .search-button {
   border-color: #000;
-  background-color: #F7F779;
+  background-color: #f7f779;
   padding: 6px 27px;
   width: auto;
   vertical-align: middle;
