--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -112,8 +112,9 @@
 {% macro nav_search(switcher_name) %}
   {% if switcher_name == "mobile" or switcher_name == "mobile-footer" %}
   <form class="search-nav" action="/{{ lang}}/search">
-    <input id="{{ switcher_name }}-search-box" class="search-input" type="search" name="q" placeholder="{{ self.search_title() }}">
-    <button class="search-button">
+    <label for="{{ switcher_name }}-search-box" hidden>{{ self.search_title() }}</label>
+    <input id="{{ switcher_name }}-search-box" class="search-input" type="search" name="q" placeholder="{{ self.search_title() }}" title="{{ self.search_title() }}" aria-label="{{ self.search_title() }}">
+    <button class="search-button" type="submit">
       <svg width="13" height="13" role="img" aria-labelledby="{{ switcher_name }}-search-icon">
         <title id="{{ switcher_name }}-search-icon">{{ self.search_title() }}</title>
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#search"></use>
@@ -123,15 +124,16 @@
   {% else %}
   <a class="nav-dropdown-btn js-hide" href="{{ url_for('search', lang=lang) }}">{{ self.search_title() }}</a>
   <div class="nav-dropdown {{switcher_name}} search-nav js-enable hidden">
-    <button type="button" class="nav-dropdown-btn" aria-expanded="false" aria-labelledby="{{ self.search_title() }}" >
+    <button type="button" class="nav-dropdown-btn" aria-expanded="false" type="submit">
       {{ self.search_title() }}
     </button>
     <ul class="nav-dropdown-list align-right hidden {{switcher_name}}-search">
       <li class="nav-dropdown-list-part">
         <form action="/{{ lang}}/search">
-          <input id="switcher_name-search-box" type="search" name="q" placeholder="{{ self.search_title() }}">
+          <label for="{{ switcher_name }}-search-box" hidden>{{ self.search_title() }}</label>
+          <input id="{{ switcher_name }}-search-box" class="search-input" type="search" name="q" placeholder="{{ self.search_title() }}" title="{{ self.search_title() }}" aria-label="{{ self.search_title() }}">
           <button class="search-button">
-            <svg width="13" height="13" role="img" aria-label="{{ switcher_name }}-search-icon">
+            <svg width="13" height="13" role="img" aria-labelledby="{{ switcher_name }}-search-icon">
               <title id="{{ switcher_name }}-search-icon">{{ self.search_title() }}</title>
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#search"></use>
             </svg>
