--- a/src/templates/base/search.html
+++ b/src/templates/base/search.html
@@ -38,8 +38,9 @@
 
   <div id="search-area">
     <form action="/{{ lang}}/search">
-      <input id="main-search-box" type="search" name="q" class="search-input" placeholder="{{ self.search_title() }}">
-      <button class="search-button main-search-button">
+      <label for="main-search-box" hidden>{{ self.search_title() }}</label>
+      <input id="main-search-box" type="search" name="q" class="search-input" placeholder="{{ self.search_title() }}" title="{{ self.search_title() }}" aria-label="{{ self.search_title() }}">
+      <button class="search-button main-search-button" aria-labelledby="main-search-icon" type="submit">
         <svg width="13" height="13" role="img" aria-labelledby="main-search-icon">
           <title id="main-search-icon">{{ self.search_title() }}</title>
           <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#search"></use>
