--- a/src/templates/base/contributors.html
+++ b/src/templates/base/contributors.html
@@ -153,7 +153,7 @@
 .contributor-search-btn {
   margin-top: 20px;
   padding: 5px 20px;
-  display: flex;
+  display: inline-block;
   align-items: center;
   border-radius: 29px;
   text-decoration: none;
@@ -217,7 +217,7 @@
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 1;
-    grid-row-end: 4;
+    grid-row-end: 5;
     width: 80px;
     height: auto;
     margin: 0;
