--- a/src/templates/pt/base.html
+++ b/src/templates/pt/base.html
@@ -165,7 +165,7 @@ Salvo indicação em contrário, as métricas em todos os {{ supported_chapters 
     "cdn": "CDN",
     "page-weight": "Peso da página",
     "resource-hints": "Dicas de Recursos",
-    "http2": "HTTP/2",
+    "http": "HTTP/2",
     "privacy": "Privacidade",
     "capabilities": "Capacidades",
     "jamstack": "Jamstack"
