--- a/src/templates/tr/base.html
+++ b/src/templates/tr/base.html
@@ -165,7 +165,7 @@ Aksi belirtilmedikçe, {{ year }} Web Almanac&#8217;ın tüm {{ supported_chapte
     "cdn": "CDN",
     "page-weight": "Sayfa Ağırlığı",
     "resource-hints": "Kaynak İpuçları",
-    "http2": "HTTP/2",
+    "http": "HTTP/2",
     "privacy": "Gizlilik",
     "capabilities": "Yetenekler",
     "jamstack": "Jamstack"
