--- a/src/templates/zh-TW/base.html
+++ b/src/templates/zh-TW/base.html
@@ -165,7 +165,7 @@ Web Almanac 網路年鑑是被熱情的網路社群擁抱而茁壯。 {{ self.co
     "cdn": "內容傳遞網路",
     "page-weight": "網頁大小",
     "resource-hints": "資源提示",
-    "http2": "超文字傳輸協定/第2版",
+    "http": "超文字傳輸協定/第2版",
     "privacy": "隱私",
     "capabilities": "功能",
     "jamstack": "Jamstack"
