--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -165,7 +165,7 @@ Unless otherwise noted, the metrics in all of the {{ supported_chapters | length
     "cdn": "CDN",
     "page-weight": "Page Weight",
     "resource-hints": "Resource Hints",
-    "http2": "HTTP/2",
+    "http": "HTTP/2",
     "privacy": "Privacy",
     "capabilities": "Capabilities",
     "jamstack": "Jamstack"
