--- a/src/templates/es/base.html
+++ b/src/templates/es/base.html
@@ -165,7 +165,7 @@ A menos que se indique lo contrario, las métricas en los {{ supported_chapters 
       "cdn": "CDN",
       "page-weight": "Peso de las Páginas",
       "resource-hints": "Sugerencias de Recursos",
-      "http2": "HTTP/2",
+      "http": "HTTP/2",
       "privacy": "Privacidad",
       "capabilities": "Capacidades",
       "jamstack": "Jamstack"
