--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -165,7 +165,7 @@ Sauf indication contraire, les statistiques des {{ supported_chapters | length }
     "cdn": "CDN",
     "page-weight": "Poids des pages",
     "resource-hints": "Indices de Ressources",
-    "http2": "HTTP/2",
+    "http": "HTTP/2",
     "privacy": "Vie Privée",
     "capabilities": "Capacités",
     "jamstack": "Jamstack"
