--- a/src/templates/hi/base.html
+++ b/src/templates/hi/base.html
@@ -165,7 +165,7 @@ Web Almanac वेब समुदाय की मेहनत से संभ
     "cdn": "CDN",
     "page-weight": "पेज वेट",
     "resource-hints": "संसाधन संकेत",
-    "http2": "HTTP/2",
+    "http": "HTTP/2",
     "privacy": "गोपनीयता",
     "capabilities": "क्षमता",
     "jamstack": "Jamstack"
