--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -165,7 +165,7 @@ Se non diversamente specificato, le metriche in tutti i {{ supported_chapters | 
     "cdn": "CDN",
     "page-weight": "Peso della pagina",
     "resource-hints": "Resource Hints",
-    "http2": "HTTP/2",
+    "http": "HTTP/2",
     "privacy": "Privacy",
     "capabilities": "Capacità",
     "jamstack": "Jamstack"
