--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -165,7 +165,7 @@ Tenzij anders vermeld, zijn de statistieken in alle {{ supported_chapters | leng
     "cdn": "CDN",
     "page-weight": "Paginagewicht",
     "resource-hints": "Bronhints",
-    "http2": "HTTP/2",
+    "http": "HTTP/2",
     "privacy": "Privacy",
     "capabilities": "Mogelijkheden",
     "jamstack": "Jamstack"
