--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -165,7 +165,7 @@
     "cdn": "CDN",
     "page-weight": "Размер страницы",
     "resource-hints": "Ресурсные подсказки",
-    "http2": "HTTP/2",
+    "http": "HTTP/2",
     "privacy": "Приватность",
     "capabilities": "Возможности",
     "jamstack": "Jamstack"
