--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -165,7 +165,7 @@
     "cdn": "CDN",
     "page-weight": "Розмір сторінки",
     "resource-hints": "Підказки для ресурсів",
-    "http2": "HTTP/2",
+    "http": "HTTP/2",
     "privacy": "Приватність",
     "capabilities": "Можливості",
     "jamstack": "Jamstack"
