--- a/src/templates/zh-CN/base.html
+++ b/src/templates/zh-CN/base.html
@@ -165,7 +165,7 @@
     "cdn": "CDN",
     "page-weight": "页面重量",
     "resource-hints": "资源提示",
-    "http2": "HTTP/2",
+    "http": "HTTP/2",
     "privacy": "隐私",
     "capabilities": "能力",
     "jamstack": "Jamstack"
