--- a/src/templates/ja/base.html
+++ b/src/templates/ja/base.html
@@ -134,7 +134,7 @@ Web Almanacは、ウェブ・コミュニティの努力によって実現して
 {% block ebook_title %}電子ブック{% endblock %}
 {% block ebook_download_short %}電子ブックPDF ({{ ebook_size_in_mb }}MB){% endblock %}
 {% block ebook_download %} {{ year }} Web AlmanacのPDFファイルをダウンロードする ({{ ebook_size_in_mb }}MB){% endblock %}
-{% block ebook_download_note %}(generated with <a href="https://www.princexml.com/">www.princexml.com</a>){% endblock %}
+{% block ebook_download_note %}（<a href="https://www.princexml.com/">www.princexml.com</a>で生成）{% endblock %}
 
 {%
   set localizedPartTitles = {
