--- a/src/templates/base/base.html
+++ b/src/templates/base/base.html
@@ -123,7 +123,7 @@
     <button class="search-button" type="submit">
       <svg width="13" height="13" role="img" aria-labelledby="{{ switcher_name }}-search-icon">
         <title id="{{ switcher_name }}-search-icon">{{ self.search_title() }}</title>
-        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#search"></use>
+        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#search-logo"></use>
       </svg>
     </button>
   </form>
@@ -141,7 +141,7 @@
           <button class="search-button" type="submit">
             <svg width="13" height="13" role="img" aria-labelledby="{{ switcher_name }}-search-icon">
               <title id="{{ switcher_name }}-search-icon">{{ self.search_title() }}</title>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#search"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#search-logo"></use>
             </svg>
           </button>
         </form>
@@ -426,7 +426,7 @@
                   <a href="https://httparchive.org/" aria-labelledby="ha-logo-mobile">
                     <svg width="70" height="35" role="img">
                       <title id="ha-logo-mobile">{{ self.http_archive_link() }}</title>
-                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha"></use>
+                      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha-logo"></use>
                     </svg>
                   </a>
                 </li>
@@ -436,7 +436,7 @@
                       <a href="https://twitter.com/HTTPArchive" aria-labelledby="twitter-logo-mobile">
                         <svg width="20" height="20" role="img">
                           <title id="twitter-logo-mobile">Twitter</title>
-                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter-logo"></use>
                         </svg>
                       </a>
                     </li>
@@ -444,7 +444,7 @@
                       <a href="https://github.com/HTTPArchive/almanac.httparchive.org" aria-labelledby="github-logo-mobile">
                         <svg width="20" height="20" role="img">
                           <title id="github-logo-mobile">GitHub</title>
-                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github-logo"></use>
                         </svg>
                       </a>
                     </li>
@@ -527,7 +527,7 @@
           <a class="ha-logo" href="https://httparchive.org/" aria-labelledby="httparchive-logo-footer-mobile">
             <svg width="70" height="35" role="img">
               <title id="httparchive-logo-footer-mobile">{{ self.http_archive_link() }}</title>
-              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha"></use>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha-logo"></use>
             </svg>
           </a>
           <ul class="social-media">
@@ -535,7 +535,7 @@
               <a href="https://twitter.com/HTTPArchive" aria-labelledby="twitter-logo-footer-mobile">
                 <svg width="20" height="20" role="img">
                   <title id="twitter-logo-footer-mobile">Twitter</title>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter-logo"></use>
                 </svg>
               </a>
             </li>
@@ -543,7 +543,7 @@
               <a href="https://github.com/HTTPArchive/almanac.httparchive.org" rel="me" aria-labelledby="github-logo-footer-mobile">
                 <svg width="20" height="20" role="img">
                   <title id="github-logo-footer-mobile">GitHub</title>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github-logo"></use>
                 </svg>
               </a>
             </li>
@@ -558,7 +558,7 @@
         <a class="ha-logo not-mobile" href="https://httparchive.org/" aria-labelledby="ha-logo-footer">
           <svg width="70" height="35" role="img">
             <title id="ha-logo-footer">{{ self.http_archive_link() }}</title>
-            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha"></use>
+            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha-logo"></use>
           </svg>
         </a>
         <ul class="social-media not-mobile">
@@ -566,7 +566,7 @@
             <a href="https://twitter.com/HTTPArchive" aria-labelledby="twitter-logo-footer">
               <svg width="20" height="20" role="img">
                 <title id="twitter-logo-footer">Twitter</title>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter-logo"></use>
               </svg>
             </a>
           </li>
@@ -574,7 +574,7 @@
             <a href="https://github.com/HTTPArchive/almanac.httparchive.org" rel="me" aria-labelledby="github-logo-footer">
               <svg width="20" height="20" role="img">
                 <title id="github-logo-footer">GitHub</title>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github-logo"></use>
               </svg>
             </a>
           </li>
