--- a/src/templates/base/base_ebook.html
+++ b/src/templates/base/base_ebook.html
@@ -355,7 +355,7 @@
             <a href="https://twitter.com/{{ contributor.twitter }}" aria-labelledby="contributors-{{ id }}-twitter">
               <svg role="img">
                 <title id="contributors-{{ id }}-twitter">{{ onTwitter(contributor.twitter) }}</title>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter-logo"></use>
               </svg>
               @{{ contributor.twitter }}
             </a>
@@ -366,7 +366,7 @@
             <a href="https://github.com/{{ contributor.github }}" aria-labelledby="contributors-{{ id }}-github">
               <svg role="img">
                 <title id="contributors-{{ id }}-github">{{ onTwitter(contributor.github) }}</title>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github-logo"></use>
               </svg>
               {{ contributor.github }}
             </a>
@@ -377,7 +377,7 @@
             <a href="https://www.linkedin.com/in/{{ contributor.twitter }}" aria-labelledby="contributors-{{ id }}-linkedin">
               <svg role="img">
                 <title id="contributors-{{ id }}-linkedin">{{ onTwitter(contributor.linkedin) }}</title>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin"></use>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#linkedin-logo"></use>
               </svg>
               {{ contributor.linkedin }}
             </a>
@@ -388,7 +388,7 @@
             <a href="{{ contributor.twitter }}" aria-labelledby="contributors-{{ id }}-website">
               <svg role="img">
                 <title id="contributors-{{ id }}-website">{{ contributor.website }}</title>
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#globe"></use>
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#globe-logo"></use>
               </svg>
               {{ contributor.website }}
             </a>
@@ -429,7 +429,7 @@
       <div class="ha-logo-wrapper">
         <svg role="img">
           <title id="ha-logo-front-cover">HTTP Archive home</title>
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha"></use>
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha-logo"></use>
         </svg>
       </div>
 
@@ -454,7 +454,7 @@
       <div class="ha-logo-wrapper">
         <svg role="img">
           <title id="ha-logo-spine">HTTP Archive home</title>
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha"></use>
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha-logo"></use>
         </svg>
       </div>
 
@@ -496,7 +496,7 @@
       <div class="ha-logo-wrapper">
         <svg role="img">
           <title id="ha-logo-back-cover">HTTP Archive home</title>
-          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha"></use>
+          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ha-logo"></use>
         </svg>
       </div>
 
