--- a/src/templates/base/base_chapter.html
+++ b/src/templates/base/base_chapter.html
@@ -75,7 +75,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
   </a>
   <a class="alt btn" hreflang="en" href="{{ metadata.get('results') }}">
     <svg width="18" height="18" role="img" aria-hidden="true">
-      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bar-chart"></use>
+      <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#bar-chart-logo"></use>
     </svg>
     {{ self.results() }}
   </a>
