Add two new chapters to base.html

--- a/src/templates/ja/base.html
+++ b/src/templates/ja/base.html
@@ -169,7 +169,9 @@ Web Almanacは、ウェブ・コミュニティの努力によって実現して
     "http": "HTTP",
     "privacy": "プライバシー",
     "capabilities": "能力",
-    "jamstack": "Jamstack"
+    "jamstack": "Jamstack",
+    "webassembly": "WebAssembly",
+    "structured-data": "構造化データ"
   }
 %}
 {% if (year == "2019" or year == "2020") %}
