--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -611,6 +611,12 @@ th.numeric,
 td.numeric {
   text-align: right;
 }
+td .numeric-good {
+  color: #38761d;
+}
+td .numeric-bad {
+  color: #ff0000;
+}
 
 tbody tr:nth-child(even) {
   background-color: #f2f2f280;
