--- a/src/templates/en/2021/methodology.html
+++ b/src/templates/en/2021/methodology.html
@@ -207,24 +207,22 @@
           <tr>
             <td>Location</td>
             <td>
-              Redwood City, California, USA<br>
-              The Dalles, Oregon, USA
+              Google Cloud Locations, USA
             </td>
             <td>
-              Redwood City, California, USA<br>
-              The Dalles, Oregon, USA
+              Google Cloud Locations, USA
             </td>
           </tr>
 
           <tr>
             <td>Connection</td>
             <td>Cable (5/1 Mbps 28ms RTT)</td>
-            <td>3G (1.600/0.768 Mbps 300ms RTT)</td>
+            <td>4G (9 Mbps 170ms RTT)</td>
           </tr>
 
           <tr>
             <td>Viewport</td>
-            <td>1024 x 768px</td>
+            <td>1376 x 768px</td>
             <td>512 x 360px</td>
           </tr>
         </tbody>
@@ -236,11 +234,11 @@
       </p>
 
       <p>
-        Mobile websites are run from within a mobile Chrome environment on an emulated Moto G4 device with a network speed equivalent to a 3G connection. Note that the emulated mobile User Agent self-identifies as Chrome 65 but is actually Chrome 84 under the hood.
+        Mobile websites are run from within a mobile Chrome environment on an emulated Moto G4 device with a network speed equivalent to a 4G connection.
       </p>
 
       <p>
-        There are two locations from which tests are run: California and Oregon USA. HTTP Archive maintains its own test agent hardware located in the <a hreflang="en" href="https://archive.org">Internet Archive</a> datacenter in California. Additional test agents in <a hreflang="en" href="https://cloud.google.com/compute/docs/regions-zones/#locations">Google Cloud Platform</a>&#8217;s us-west-1 location in Oregon are added as needed.
+        Test agents run from various <a hreflang="en" href="https://cloud.google.com/compute/docs/regions-zones/#locations">Google Cloud Platform locations</a> based in the USA.
       </p>
 
       <p>
@@ -260,7 +258,7 @@
       </p>
 
       <p>
-        HTTP Archive runs the latest version of Lighthouse for all of its mobile web pages — desktop pages are not included because of limited resources. As of the July {{ year }} crawl, HTTP Archive used a combination of <a hreflang="en" href="https://github.com/GoogleChrome/lighthouse/releases/tag/v8.0.0">8.0.0</a> anmd <a hreflang="en" href="https://github.com/GoogleChrome/lighthouse/releases/tag/v8.1.0">8.1.0</a> versions of Lighthouse.
+        HTTP Archive runs the latest version of Lighthouse for all of its mobile web pages — desktop pages are not included because of limited resources. As of the July {{ year }} crawl, HTTP Archive used a combination of <a hreflang="en" href="https://github.com/GoogleChrome/lighthouse/releases/tag/v8.0.0">8.0.0</a> and <a hreflang="en" href="https://github.com/GoogleChrome/lighthouse/releases/tag/v8.1.0">8.1.0</a> versions of Lighthouse.
       </p>
 
       <p>
